# pubfig

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
docs/: palette-gallery.md  palette-gallery.zh-CN.md
examples/: export_gallery.py  export_gallery_mpl.py  gallery.py  generate_palette_gallery.py  palette_comparison_demo.py
plan/: api_naming_conventions.md  api_reference_overview.md  nature_scatter_heatmap_research.md  nature_style_checklist.md  nature_style_guide.md  parameter_naming_conventions.md  parameter_renames_2026-03-10.md  plot_parameterization_policy.md
src/pubfig/: __init__.py  _compat.py  _mpl_utils.py  _param_aliases.py  _style.py  specs.py
src/pubfig/colors/: __init__.py  palettes.py  plotly_palettes.py  utils.py
src/pubfig/export/: __init__.py  io.py
src/pubfig/plots/: __init__.py  _bar_scatter.py  _bar_simple.py  _bar_stacked.py  _distribution_utils.py  _raincloud.py  bar.py  dimreduction.py  distribution.py  evaluation.py  flow.py  heatmap.py  line.py  radar.py  scatter.py
src/pubfig/stats/: __init__.py  annotations.py
src/pubfig/themes/: __init__.py  base.py  cell.py  default.py  nature.py  science.py
tests/: conftest.py  test_api_exports.py  test_bar.py  test_colors.py  test_dimreduction.py  test_distribution.py  test_evaluation.py  test_export.py  test_flow.py  test_heatmap.py  test_line.py  test_radar.py  test_scatter.py  test_style.py  test_themes.py
